// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopSort should render TopSort component with route query, should change className 1`] = `
<nav
  className="nav"
>
  <div
    className="wrap"
  >
    <div
      className="title"
    >
      <Tab
        key="mockTab"
        onSelectTab={[Function]}
      >
        mockTab
      </Tab>
      <select
        className="arrow active"
        name="genre"
        onChange={[MockFunction]}
      >
        <option
          hidden={true}
          value="Genre"
        >
          Genre
        </option>
        <option
          key="genres"
          value="genres"
        >
          genres
        </option>
        <option
          key="genres2"
          value="genres2"
        >
          genres2
        </option>
      </select>
    </div>
    <SortBox
      isDisplayCardDirection="square"
      onSwitchToLine={[Function]}
      onSwitchToSquare={[Function]}
    />
  </div>
</nav>
`;

exports[`TopSort should render TopSort component without props 1`] = `
<nav
  className="nav"
>
  <div
    className="wrap"
  >
    <div
      className="title"
    >
      <select
        className="arrow active"
        name="genre"
        onChange={[MockFunction]}
      >
        <option
          hidden={true}
          value="Genre"
        >
          Genre
        </option>
      </select>
    </div>
    <SortBox
      isDisplayCardDirection="square"
      onSwitchToLine={[Function]}
      onSwitchToSquare={[Function]}
    />
  </div>
</nav>
`;
